--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,9 @@
         <title>Template</title>
     </head>
     <body>
-        {{{ body }}}
+        <br>
+        <div class='container jumbotron'>
+            {{{ body }}}
+        </div>
     </body>
 </html>
