--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,32 @@
-<h1>Burgers!</h1>
-
-<h2>Burgers that have no been devoured</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#unless devoured}}
-            {{> burgers/burger-block devoured=true}}
-        {{/unless}}
-    {{/each}}
-</ul>
-
-<h2>Burgers that have been devoured</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#if devoured}}
-            {{> burgers/burger-block devoured=false}}
-        {{/if}}
-    {{/each}}
-</ul>
-
+<div class="row">
+    <div class="col">
+        <h3>Burgers that have no been devoured</h3>
+        <ul class="list-group">
+            {{#each burgers}}
+                {{#unless devoured}}
+                    {{> burgers/burger-block devoured=true}}
+                {{/unless}}
+            {{/each}}
+        </ul>
+    </div>
+    <div class="col">
+        <h3>Burgers that have been devoured</h3>
+        <ul class="list-group">
+            {{#each burgers}}
+                {{#if devoured}}
+                    {{> burgers/burger-block devoured=false}}
+                {{/if}}
+            {{/each}}
+        </ul>
+    </div>
+</div>
+<br>
 <h2>Add a Burger</h2>
 <form class="create-form">
     <div class="form-group">
         <label for="burger">Burger Name:</label>
-        <input type="text" id="burger" name="name">
+        <input class='form-control' type="text" id="burger" name="name">
     </div>
 
-    <button type="submit">Submit</button>
+    <button class='btn btn-primary' type="submit">Submit</button>
 </form>
