Form with javascript working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
         <script src='https://dvasquez4155.github.io/api/goBack.js'></script>
         <script src="https://kit.fontawesome.com/385ee6e559.js"></script>
         <script src='https://dvasquez4155.github.io/api/JSON.js'></script>
-        <title>Template</title>
+        <title>Eat Da Burger</title>
     </head>
     <body>
         <br>
