--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class='col-sm'><span>{{burger_name}}</span></div>
             {{#if devoured}}
-            <button type='button' class="col-auto change-sleep btn btn-primary pull-right" data-id="{{id}}" data-newsleep="{{devoured}}">
+            <button type='button' class="col-auto change-devour btn btn-primary pull-right" data-id="{{id}}" data-newsleep="{{devoured}}">
                 Devour
             </button>
             {{/if}}
