--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,8 +3,12 @@
         <div class="row">
             <div class='col-sm'><span>{{burger_name}}</span></div>
             {{#if devoured}}
-            <button type='button' class="col-auto change-devour btn btn-primary pull-right" data-id="{{id}}" data-newsleep="{{devoured}}">
+            <button type='button' class="devour col-auto btn btn-primary pull-right" data-id="{{id}}" data-newsleep="{{devoured}}">
                 Devour
+            </button>
+            {{else}}
+            <button type='button' class="delete col-auto btn btn-danger pull-right" data-id="{{id}}" data-newsleep="{{devoured}}">
+                <i class="fas fa-trash-alt"></i>
             </button>
             {{/if}}
         </div>
